tests/golden/cli/diagnostic-renderer/no-color.txt
failed
src/image.wr:2:11: error[W6_DEMO]: Unknown identifier 'banana'.
  entry = banana
          ^^^^^^
